--- a/promo-timeline-app/src/profile.html
+++ b/promo-timeline-app/src/profile.html
@@ -2,121 +2,133 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>User Profile - PerfectDraft</title>
-  <link rel="stylesheet" href="styles.css" />
-  <link rel="icon" href="img/favicon%20small.ico" type="image/png" />
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/emoji-mart@latest/css/emoji-mart.css">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>User Profile - PerfectDraft</title>
+    <link rel="stylesheet" href="styles.css" />
+    <link rel="icon" href="img/favicon%20small.ico" type="image/png" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/emoji-mart@latest/css/emoji-mart.css">
 </head>
 
 <body>
-  <script src="https://cdn.jsdelivr.net/npm/emoji-mart@latest/dist/browser.js"></script>
-
-  <div class="header">
-    <div class="logo">
-      <a href="CommandBoard.html" class="href">
-        <img src="img/PerfectDraft-Logo_300dpi.png" alt="PerfectDraft Logo" />
-      </a>
-    </div>
-    <div class="filter-block"></div>
-    <div>
-      <a href="CommandBoard.html" style="
+    <script src="https://cdn.jsdelivr.net/npm/emoji-mart@latest/dist/browser.js"></script>
+    <div class="header">
+        <div class="logo">
+            <a href="CommandBoard.html" class="href">
+                <img src="img/PerfectDraft-Logo_300dpi.png" alt="PerfectDraft Logo">
+            </a>
+        </div>
+        <div class="filter-block"></div>
+        <div>
+            <a href="CommandBoard.html" style="display: inline-block; text-decoration: none">
+                <label style="font-weight: 400" class="multiselect-header">Calendar View 📅</label>
+            </a>
+            <a href="PromoTimeline.html" style="
             display: inline-block;
             margin-left: 10px;
             text-decoration: none;
           ">
-        <label style="font-weight: 400" class="multiselect-header">Main App 🏠</label>
-      </a>
-      <button id="logoutButton" class="logoutButton" style="margin-left: 10px">
-        Logout
-      </button>
+                <label style="font-weight: 400" class="multiselect-header">Timeline View ↕️</label>
+            </a>
+            <a href="3PP.html" style="
+            display: inline-block;
+            margin-left: 10px;
+            text-decoration: none;
+          ">
+                <label style="font-weight: 400; text-decoration: none" class="multiselect-header">3PP View 🍺</label>
+            </a>
+            <a href="profile.html" style="display: inline-block;margin-left: 10px; text-decoration: none;">
+                <label style="font-weight:400;" class="multiselect-header">Profile 👤</label>
+            </a>
+            <button id="logoutButton" class="logoutButton" style="margin-left: 10px">
+                Logout
+            </button>
+        </div>
     </div>
-  </div>
 
-  <div class="login-page-wrapper profile-page-wrapper">
-    <div class="profile-info-section">
-      <div class="profile-box">
-        <h1>My Profile</h1>
+    <div class="login-page-wrapper profile-page-wrapper">
+        <div class="profile-info-section">
+            <div class="profile-box">
+                <h1>My Profile</h1>
 
-        <div class="profile-avatar-upload">
+                <div class="profile-avatar-upload">
 
-          <div class="input-group" style="width: 100%; margin-top: 15px">
-            
-            <div class="profile-avatar-upload">
-              <span id="profileEmojiAvatar" class="avatar-emoji"></span>
+                    <div class="input-group" style="width: 100%; margin-top: 15px">
 
-              <button type="button" id="openEmojiPickerButton" class="multiselect-header">
-                Pick Emoji
-              </button>
+                        <div class="profile-avatar-upload">
+                            <span id="profileEmojiAvatar" class="avatar-emoji"></span>
 
-              <div id="emojiPickerContainer" style="display: none; margin-top: 10px"></div>
+                            <button type="button" id="openEmojiPickerButton" class="multiselect-header">
+                                Pick Emoji
+                            </button>
+
+                            <div id="emojiPickerContainer" style="display: none; margin-top: 10px"></div>
+                        </div>
+
+                        <form id="profileUpdateForm"></form>
+                    </div>
+                </div>
+
+                <form id="profileUpdateForm">
+                    <div class="input-group">
+                        <label for="displayName">Display Name</label>
+                        <input type="text" id="displayName" name="displayName" />
+                    </div>
+                    <div class="input-group">
+                        <label for="profileEmail">Email</label>
+                        <input type="email" id="profileEmail" name="profileEmail" disabled />
+                    </div>
+                    <div class="input-group">
+                        <label for="phoneNumber">Phone Number</label>
+                        <input type="tel" id="phoneNumber" name="phoneNumber" />
+                    </div>
+                    <div class="input-group">
+                        <label for="profileCountry">Country</label>
+                        <input type="text" id="profileCountry" name="profileCountry" disabled />
+                    </div>
+                    <div class="input-group">
+                        <label for="profileChannel">Channel</label>
+                        <input type="text" id="profileChannel" name="profileChannel" disabled />
+                    </div>
+                    <button type="submit" id="saveProfileButton" class="updateButton">Save Changes</button>
+                </form>
+                <p id="profileMessage" class="auth-message"></p>
             </div>
-
-            <form id="profileUpdateForm"></form>
-          </div>
         </div>
 
-        <form id="profileUpdateForm">
-          <div class="input-group">
-            <label for="displayName">Display Name</label>
-            <input type="text" id="displayName" name="displayName" />
-          </div>
-          <div class="input-group">
-            <label for="profileEmail">Email</label>
-            <input type="email" id="profileEmail" name="profileEmail" disabled />
-          </div>
-          <div class="input-group">
-            <label for="phoneNumber">Phone Number</label>
-            <input type="tel" id="phoneNumber" name="phoneNumber" />
-          </div>
-          <div class="input-group">
-            <label for="profileCountry">Country</label>
-            <input type="text" id="profileCountry" name="profileCountry" disabled />
-          </div>
-          <div class="input-group">
-            <label for="profileChannel">Channel</label>
-            <input type="text" id="profileChannel" name="profileChannel" disabled />
-          </div>
-          <button type="submit" id="saveProfileButton" class="updateButton">Save Changes</button>
-        </form>
-        <p id="profileMessage" class="auth-message"></p>
-      </div>
-    </div>
-
-    <div class="profile-promos-section">
-      <div class="profile-box">
-        <h1>My Promotions</h1>
-        <div class="promo-table-container">
-          <table id="userPromosTable" class="promo-table-HomePage">
-            <thead>
-              <tr>
-                <th>Country</th>
-                <th>Promo Title</th>
-                <th>Type</th>
-                <th>Channels</th>
-                <th>Icon</th>
-                <th>Author</th>
-                <th>Promo start date</th>
-                <th>Promo end date</th>
-                <th>Actions</th>
-                <th>Owner</th>
-                <th>Status</th>
-              </tr>
-            </thead>
-            <tbody></tbody>
-          </table>
-          <p id="noPromosMessage" style="display: none; margin-top: 20px">
-            You haven't created any promotions yet.
-          </p>
+        <div class="profile-promos-section">
+            <div class="profile-box">
+                <h1>My Promotions</h1>
+                <div class="promo-table-container">
+                    <table id="userPromosTable" class="promo-table-HomePage">
+                        <thead>
+                            <tr>
+                                <th>Country</th>
+                                <th>Promo Title</th>
+                                <th>Type</th>
+                                <th>Channels</th>
+                                <th>Icon</th>
+                                <th>Author</th>
+                                <th>Promo start date</th>
+                                <th>Promo end date</th>
+                                <th>Actions</th>
+                                <th>Owner</th>
+                                <th>Status</th>
+                            </tr>
+                        </thead>
+                        <tbody></tbody>
+                    </table>
+                    <p id="noPromosMessage" style="display: none; margin-top: 20px">
+                        You haven't created any promotions yet.
+                    </p>
+                </div>
+                <p id="promosMessage" class="auth-message"></p>
+            </div>
         </div>
-        <p id="promosMessage" class="auth-message"></p>
-      </div>
     </div>
-  </div>
 
-  
-  <script type="module" src="scripts/profileApp.js"></script>
+
+    <script type="module" src="scripts/profileApp.js"></script>
 </body>
 
 </html>
