--- a/promo-timeline-app/src/promo-detail.html
+++ b/promo-timeline-app/src/promo-detail.html
@@ -11,8 +11,6 @@
 </head>
 
 <body>
-    <script src="https://cdn.jsdelivr.net/npm/emoji-mart@latest/dist/browser.js"></script>
-    <script type="module" src="scripts/promoDetailApp.js"></script>
 
     <div class="header">
         <div class="logo">
@@ -24,6 +22,13 @@
         <div>
             <a href="CommandBoard.html" style="display: inline-block; text-decoration: none">
                 <label style="font-weight: 400" class="multiselect-header">Calendar View 📅</label>
+            </a>
+            <a href="PromoTimeline.html" style="
+            display: inline-block;
+            margin-left: 10px;
+            text-decoration: none;
+          ">
+                <label style="font-weight: 400" class="multiselect-header">Timeline View ↕️</label>
             </a>
             <a href="3PP.html" style="
             display: inline-block;
@@ -45,8 +50,7 @@
         <div class="edit-info-section">
             <div class="profile-box">
                 <h1>Edit Promotion</h1>
-                <p id="promoIdDisplay" style="font-size: 0.9em; color: #666; margin-bottom: 20px;">Editing Promotion ID:
-                    15</p>
+                <p id="promoIdDisplay" style="font-size: 0.9em; color: #666; margin-bottom: 20px;"></p>
 
                 <form id="promoDetailForm">
                     <div class="form-section">
@@ -54,7 +58,7 @@
                         <div class="form-grid-container">
                             <div class="input-group">
                                 <label for="promoTitle">Promo Title</label>
-                                <input type="text" id="promoTitle" name="promoTitle" required="">
+                                <input type="text" id="promoTitle" name="promoTitle">
                             </div>
 
                             <div class="input-group">
@@ -136,7 +140,7 @@
                                     <option value="Cavistes Indépendants">Cavistes Indépendants</option>
                                     <option value="Cavistes Indépendants - Loyalty">Cavistes Indépendants - Loyalty
                                     </option>
-                                    <option value="CHR">DTC</option>
+                                    <option value="DTC">DTC</option>
                                 </select>
                             </div>
 
@@ -144,11 +148,9 @@
                                 <label for="icon">Icon</label>
                                 <div class="profile-avatar-upload">
                                     <span id="promoIconDisplay" class="avatar-emoji"></span>
-
                                     <button type="button" id="openIconPickerButton" class="multiselect-header">
                                         Pick Icon
                                     </button>
-
                                     <div id="iconPickerContainer" style="display: none; margin-top: 10px"></div>
                                 </div>
                             </div>
@@ -158,10 +160,8 @@
                                 <input type="url" id="link" name="link">
                             </div>
 
-                            <div class="input-group">
-                                <label for="tableName">Table IDs (comma-separated numbers)</label>
-                                <input type="text" id="tableName" name="tableName" placeholder="e.g., 1,2">
-                            </div>
+                            <input type="hidden" id="tableName" name="tableName">
+
                             <div class="input-group">
                                 <label for="borderColor">Border Color</label>
                                 <input type="text" id="borderColor" name="borderColor"
@@ -175,6 +175,15 @@
                         </div>
                     </div>
 
+                    <div class="form-section">
+                        <h2>Custom Tables</h2>
+                        <div x-data>
+                            <button type="button" @click="$dispatch('open-table-modal')" class="updateButton">
+                                Manage Custom Tables
+                            </button>
+                        </div>
+                    </div>
+
                     <div class="form-section admin-info">
                         <h2>Administrative Information</h2>
                         <div class="form-grid-container">
@@ -182,17 +191,14 @@
                                 <label for="author">Author</label>
                                 <input type="text" id="author" name="author" disabled="">
                             </div>
-
                             <div class="input-group">
                                 <label for="owner">Owner</label>
                                 <input type="text" id="owner" name="owner" disabled="">
                             </div>
-
                             <div class="input-group">
                                 <label for="creationDate">Creation Date</label>
                                 <input type="date" id="creationDate" name="creationDate" disabled="">
                             </div>
-
                             <div class="input-group">
                                 <label for="status">Status</label>
                                 <select id="status" name="status">
@@ -201,7 +207,6 @@
                                     <option value="draft">Draft</option>
                                 </select>
                             </div>
-
                             <div class="input-group">
                                 <label for="country">Country</label>
                                 <select id="country" name="country" required>
@@ -217,12 +222,10 @@
                                     <option value="Germany">Germany</option>
                                 </select>
                             </div>
-
                             <div class="input-group">
                                 <label for="bu">BU</label>
                                 <input type="text" id="bu" name="bu" readonly>
                             </div>
-
                             <div class="input-group">
                                 <label for="userId">User ID</label>
                                 <input type="text" id="userId" name="userId" disabled="">
@@ -240,7 +243,6 @@
                     </div>
                 </form>
                 <p id="promoMessage" class="auth-message"></p>
-
             </div>
         </div>
 
@@ -249,14 +251,87 @@
                 <h2>Promotion Preview</h2>
                 <div id="promoPreview">
                     <p>Your promotion preview will appear here as you fill out the form.</p>
-                    <p>It could show the title, dates, icon, and other key details.</p>
                 </div>
             </div>
         </div>
     </div>
 
+    <div x-data="tableManager()" @keydown.escape.window="closeModal()" x-show="isModalOpen" x-cloak
+        @open-table-modal.window="openModal()" class="modal-overlay">
+        <div class="modal-content" @click.outside="closeModal()">
+            <button @click="closeModal()" class="modal-close-button">&times;</button>
+            <h1>Manage Custom Tables</h1>
+
+            <div class="modal-section">
+                <h2>Select a Table to Edit or Create a New One</h2>
+                <div class="table-selection-list">
+                    <button @click="startNewTable()" :class="{ 'active': !selectedTableId }">
+                        ➕ Create New Table
+                    </button>
+                    <template x-for="id in linkedTableIds" :key="id">
+                        <button @click="loadTableForEditing(id)" :class="{ 'active': selectedTableId == id }">
+                            📝 Edit Table ID: <span x-text="id"></span>
+                        </button>
+                    </template>
+                </div>
+                <p x-show="linkedTableIds.length === 0" style="color: #666; text-align: center; margin-top: 10px;">
+                    No tables are linked to this promotion yet.
+                </p>
+            </div>
+
+            <div class="modal-section">
+                <h2 x-text="selectedTableId ? 'Editing Table ' + selectedTableId : 'Creating New Table'"></h2>
+                <div class="table-controls">
+                    <label for="modalTableName">Table Name:</label>
+                    <input type="text" id="modalTableName" x-model="editor.tableName">
+                    <label for="modalTableStyle">Style:</label>
+                    <select id="modalTableStyle" x-model="editor.tableStyle">
+                        <option value="blackTable">Black Header</option>
+                        <option value="HomePage">Homepage</option>
+                        <option value="transparentTable">Transparent</option>
+                        <option value="budget">Budget</option>
+                    </select>
+                    <button @click="addColumn()">+ Col</button>
+                    <button @click="removeLastColumn()">- Col</button>
+                    <button @click="addRow()">+ Row</button>
+                    <button @click="removeLastRow()">- Row</button>
+                </div>
+                <div class="table-display">
+                    <table class="dynamic-custom-table" :class="editor.tableStyle">
+                        <thead>
+                            <tr>
+                                <template x-for="(header, colIndex) in editor.headers" :key="colIndex">
+                                    <th contenteditable="true"
+                                        @blur="editor.headers[colIndex] = $event.target.textContent" x-text="header">
+                                    </th>
+                                </template>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <template x-for="(row, rowIndex) in editor.rows" :key="rowIndex">
+                                <tr>
+                                    <template x-for="(cell, colIndex) in row" :key="colIndex">
+                                        <td contenteditable="true" @blur="editor.rows[rowIndex][colIndex] = $event.target.innerHTML" x-html="cell"></td>
+
+                                    </template>
+                                </tr>
+                            </template>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+
+            <div class="modal-actions">
+                <button class="updateButton" @click="saveTable()">💾 Save Changes</button>
+                <button class="logoutButton" @click="deleteTable()" :disabled="!selectedTableId">🗑️ Delete Selected
+                    Table</button>
+                <span class="auth-message" :class="message.isError ? 'error' : 'success'" x-text="message.text"></span>
+            </div>
+        </div>
+    </div>
 
     <script type="module" src="scripts/promoDetailApp.js"></script>
+
 </body>
 
 </html>
